--- a/whatsapp.html
+++ b/whatsapp.html
@@ -14,14 +14,32 @@
       <h2 class="text-2xl font-bold mb-3">🔒 WhatsApp Plus v18.70 (GBWhatsApp Pro)</h2>
       <p class="text-gray-400 mb-6">Descargá la versión modificada con funciones extra. ¡Fácil y sin vueltas!</p>
 
-      <!-- Botones de suscripción -->
-      <a id="btnSub1" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded-full mb-3 block" 
-         href="https://www.youtube.com/@AssaApps" target="_blank" onclick="marcarClick(this)">
-         📺 Suscribirme al canal Principal
+      <!-- Botón de suscripción principal -->
+      <a id="btnSub1" href="https://www.youtube.com/@AssaApps" target="_blank"
+         onclick="registrarSuscripcion()"
+         class="flex items-center justify-center gap-2 bg-blue-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full mb-3">
+        <!-- Icono YouTube -->
+        <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" class="w-6 h-6">
+          <g fill="#ea5a47">
+            <path d="M30.5253 8.6553c-0.3487-1.3129-1.3759-2.3468-2.6804-2.6977C25.4807 5.3199 16 5.3199 16 5.3199s-9.4806 0-11.845 0.6377c-1.3044 0.3509-2.3318 1.3848-2.6804 2.6977C0.8411 11.035 0.8411 16 0.8411 16s0 4.9649 0.6335 7.3448c0.3486 1.3128 1.376 2.3467 2.6804 2.6978C6.5194 26.6801 16 26.6801 16 26.6801s9.4807 0 11.8449-0.6376c1.3045-0.3511 2.3317-1.3849 2.6804-2.6978C31.1589 20.9649 31.1589 16 31.1589 16s0-4.965-0.6336-7.3447"></path>
+            <path fill="#fff" d="m12.8993 20.5078 7.92396-4.5076-7.92396-4.508Z"></path>
+          </g>
+        </svg>
+        <span>Suscribirse al canal principal</span>
       </a>
-      <a id="btnSub2" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded-full mb-3 block" 
-         href="https://www.youtube.com/@AssaAR10" target="_blank" onclick="marcarClick(this)">
-         📺 Suscribirme al canal Secundario
+
+      <!-- Botón de suscripción secundario -->
+      <a id="btnSub2" href="https://www.youtube.com/@AssaAR10" target="_blank"
+         onclick="registrarSuscripcion()"
+         class="flex items-center justify-center gap-2 bg-blue-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full mb-3">
+        <!-- Icono YouTube -->
+        <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" class="w-6 h-6">
+          <g fill="#ea5a47">
+            <path d="M30.5253 8.6553c-0.3487-1.3129-1.3759-2.3468-2.6804-2.6977C25.4807 5.3199 16 5.3199 16 5.3199s-9.4806 0-11.845 0.6377c-1.3044 0.3509-2.3318 1.3848-2.6804 2.6977C0.8411 11.035 0.8411 16 0.8411 16s0 4.9649 0.6335 7.3448c0.3486 1.3128 1.376 2.3467 2.6804 2.6978C6.5194 26.6801 16 26.6801 16 26.6801s9.4807 0 11.8449-0.6376c1.3045-0.3511 2.3317-1.3849 2.6804-2.6978C31.1589 20.9649 31.1589 16 31.1589 16s0-4.965-0.6336-7.3447"></path>
+            <path fill="#fff" d="m12.8993 20.5078 7.92396-4.5076-7.92396-4.508Z"></path>
+          </g>
+        </svg>
+        <span>Suscribirse al canal secundario</span>
       </a>
 
       <!-- Contador -->
