--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
       { nombre: "AI Photo Enhancer & Upscaler", img: "/img/aiphoto.webp", href: "aiphoto.html", color: "bg-green-600" },
       { nombre: "Avast CleanUp", img: "/img/avast.avif", href: "avast.html", color: "bg-green-600" },
       { nombre: "Background Eraser", img: "/img/background.png", href: "background.html", color: "bg-green-600" },
-      { nombre: "CCleaner PRO", img: "/img/CCleaner.png", href: "ccleaner.html", color: "bg-green-600" }
+      { nombre: "CCleaner PRO", img: "/img/CCleaner.png", href: "ccleaner.html", color: "bg-green-600" },
+      { nombre: "Cast to TV, Chromecast & Roku v2.4.4.1 PREMIUM", img: "/img/castv.webp", href: "castv.html", color: "bg-green-600" }
     ];
 
     const cardsPerPage = 6;
