--- a/amazonprime.html
+++ b/amazonprime.html
@@ -108,7 +108,7 @@
         if (tiempo <= 0) {
           clearInterval(intervalo);
           contadorTexto.textContent = '✅ ¡Ya podés descargar!';
-          btnDescarga.href = "https://www.mediafire.com/file/pd6of2il53joxiy/Amazon-Prime-Video-v3.0.418.857-MOD.apk/file";
+          btnDescarga.href = "https://srtslug.biz/8b9DT";
           btnDescarga.innerText = "⬇️ Descargar Amazon Prime Premium";
           btnDescarga.classList.remove("opacity-50", "cursor-not-allowed");
           btnDescarga.classList.add("hover:bg-green-700");
