--- a/avast.html
+++ b/avast.html
@@ -101,7 +101,7 @@
         if (tiempo <= 0) {
           clearInterval(intervalo);
           contadorTexto.textContent = '✅ ¡Ya podés descargar!';
-          btnDescarga.href = "https://www.mediafire.com/file/uuqtdgrnukts1po/Avast_Cleanup_v25.15.0_B800011220_%255BPro%255D-.apk/file";
+          btnDescarga.href = "https://srtslug.biz/avscln";
           btnDescarga.innerText = "⬇️ Descargar Avast Cleanup";
           btnDescarga.classList.remove("opacity-50", "cursor-not-allowed");
           btnDescarga.classList.add("hover:bg-green-700");
