--- a/background.html
+++ b/background.html
@@ -84,7 +84,7 @@
         if (tiempo <= 0) {
           clearInterval(intervalo);
           contadorTexto.textContent = '✅ ¡Ya podés descargar!';
-          btnDescarga.href = "https://www.mediafire.com/file/js0m00y6ghafo4f/Background_Eraser_-_Remove_BG_v2.285.87_%255BPro%255D-.apk/file";
+          btnDescarga.href = "https://srtslug.biz/8b9Fx";
           btnDescarga.innerText = "⬇️ Descargar Background Eraser";
           btnDescarga.classList.remove("opacity-50", "cursor-not-allowed");
           btnDescarga.classList.add("hover:bg-green-700");
