--- a/ccleaner.html
+++ b/ccleaner.html
@@ -89,7 +89,7 @@
         if (tiempo <= 0) {
           clearInterval(intervalo);
           contadorTexto.textContent = '✅ ¡Ya podés descargar!';
-          btnDescarga.href = "https://www.mediafire.com/file/ootbqtdrjbbg1z6/CCleaner_v25.15.0_B800011220_%255BPro%255D.apk/file";
+          btnDescarga.href = "https://srtslug.biz/8b9Fm";
           btnDescarga.innerText = "⬇️ Descargar CCleaner Pro";
           btnDescarga.classList.remove("opacity-50", "cursor-not-allowed");
           btnDescarga.classList.add("hover:bg-green-700");
