--- a/lightroom.html
+++ b/lightroom.html
@@ -89,7 +89,7 @@
         if (tiempo <= 0) {
           clearInterval(intervalo);
           contadorTexto.textContent = '✅ ¡Ya podés descargar!';
-          btnDescarga.href = "https://www.mediafire.com/file/ibdszbw7pbywcbo/Lightroom_v10.4.1%255B%2540APK120%255D.apk/file";
+          btnDescarga.href = "https://srtslug.biz/8b9Gf";
           btnDescarga.innerText = "⬇️ Descargar Lightroom";
           btnDescarga.classList.remove("opacity-50", "cursor-not-allowed");
           btnDescarga.classList.add("hover:bg-green-700");
