--- a/magis-cel.html
+++ b/magis-cel.html
@@ -89,7 +89,7 @@
         if (tiempo <= 0) {
           clearInterval(intervalo);
           contadorTexto.textContent = '✅ ¡Ya podés descargar!';
-          btnDescarga.href = "https://www.mediafire.com/file/i2v5u1wdvngo8k7/pro-celular.apk/file";
+          btnDescarga.href = "https://srtslug.biz/8b9Gp";
           btnDescarga.innerText = "⬇️ Descargar Magis TV Pro Celular";
           btnDescarga.classList.remove("opacity-50", "cursor-not-allowed");
           btnDescarga.classList.add("hover:bg-green-700");
