--- a/minecraft.html
+++ b/minecraft.html
@@ -99,7 +99,7 @@
         if (tiempo <= 0) {
           clearInterval(intervalo);
           contadorTexto.textContent = '✅ ¡Ya podés descargar!';
-          btnDescarga.href = "https://www.mediafire.com/file/51srsowtlykvd1z/Minecraft+v1.21.100.6+[Comprado]-ByAssaAR.apk/file";
+          btnDescarga.href = "https://srtslug.biz/8b9Gy";
           btnDescarga.innerText = "⬇️ Descargar Minecraft";
           btnDescarga.classList.remove("opacity-50", "cursor-not-allowed");
           btnDescarga.classList.add("hover:bg-green-700");
