--- a/pixelcut.html
+++ b/pixelcut.html
@@ -89,7 +89,7 @@
         if (tiempo <= 0) {
           clearInterval(intervalo);
           contadorTexto.textContent = '✅ ¡Ya podés descargar!';
-          btnDescarga.href = "https://www.mediafire.com/file/lkfq104ge4x0ni1/Pixelcut_v0.9.20.apk/file";
+          btnDescarga.href = "https://srtslug.biz/pixlct";
           btnDescarga.innerText = "⬇️ Descargar PixelCut";
           btnDescarga.classList.remove("opacity-50", "cursor-not-allowed");
           btnDescarga.classList.add("hover:bg-green-700");
