--- a/spotifymod.html
+++ b/spotifymod.html
@@ -96,7 +96,7 @@
         if (tiempo <= 0) {
           clearInterval(intervalo);
           contadorTexto.textContent = '✅ ¡Ya podés descargar!';
-          btnDescarga.href = "https://www.mediafire.com/file/x0s9605mq5wl9kh/Spotify_v9.0.72.967_%255BMOD%255D.apk/file";
+          btnDescarga.href = "https://srtslug.biz/sptfy";
           btnDescarga.innerText = "⬇️ Descargar Spotify MOD";
           btnDescarga.classList.remove("opacity-50", "cursor-not-allowed");
           btnDescarga.classList.add("hover:bg-green-700");
