--- a/aiphoto.html
+++ b/aiphoto.html
@@ -101,7 +101,7 @@
         if (tiempo <= 0) {
           clearInterval(intervalo);
           contadorTexto.textContent = '✅ ¡Ya podés descargar!';
-          btnDescarga.href = "https://www.mediafire.com/file/ry395747pjqiswk/AI_Photo_Enhancer_Upscaler_3.22.3_392.apk/file";
+          btnDescarga.href = "https://srtslug.biz/8b9DM";
           btnDescarga.innerText = "⬇️ Descargar AI Photo Enhancer";
           btnDescarga.classList.remove("opacity-50", "cursor-not-allowed");
           btnDescarga.classList.add("hover:bg-green-700");
