--- a/castv.html
+++ b/castv.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dark Play – Descarga Bloqueada</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cast to TV – Descarga Bloqueada</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-900 text-white font-sans">
 
   <div class="flex items-center justify-center min-h-screen px-4">
     <div class="bg-gray-800 rounded-2xl shadow-lg p-8 max-w-md text-center">
-      <img src="/img/darkplay.png" alt="Dark Play Logo" class="w-24 h-24 mx-auto mb-5">
-      <h2 class="text-2xl font-bold mb-3">🔒 Dark Play v1.0</h2>
-      <p class="text-gray-400 mb-6">Mira series y películas gratis con la última versión de <b>Dark Play</b>.</p>
-      <p class="text-gray-400 mb-6">Para acceder a la descarga, primero <b>suscribite</b> a nuestro canal de YouTube.</p>
+      <img src="/img/castv.webp" alt="Cast to TV Logo" class="w-24 h-24 mx-auto mb-5">
+      <h2 class="text-2xl font-bold mb-3">🔒 Cast to TV, Chromecast & Roku v2.4.4.1 PREMIUM</h2>
+      <p class="text-gray-400 mb-6">Transmití tus videos y fotos a cualquier TV compatible de forma rápida y sencilla.</p>
 
-      <!-- Botón de suscripción principal -->
+     <!-- Botón de suscripción principal -->
       <a id="btnSub1" href="https://www.youtube.com/@AssaApps" target="_blank"
          onclick="registrarSuscripcion()"
          class="flex items-center justify-center gap-2 bg-blue-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full mb-3">
@@ -90,8 +89,8 @@
         if (tiempo <= 0) {
           clearInterval(intervalo);
           contadorTexto.textContent = '✅ ¡Ya podés descargar!';
-          btnDescarga.href = "https://srtslug.biz/8b9Gc";
-          btnDescarga.innerText = "⬇️ Descargar Dark Play";
+          btnDescarga.href = "https://srtslug.biz/8b9FM";
+          btnDescarga.innerText = "⬇️ Descargar Cast to TV Premium";
           btnDescarga.classList.remove("opacity-50", "cursor-not-allowed");
           btnDescarga.classList.add("hover:bg-green-700");
           btnDescarga.style.pointerEvents = 'auto';
@@ -102,5 +101,3 @@
 
 </body>
 </html>
-
-
