--- a/ccleanerpc.html
+++ b/ccleanerpc.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dark Play – Descarga Bloqueada</title>
+  <title>CCleaner PRO (PC) – Descarga Bloqueada</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-900 text-white font-sans">
-
   <div class="flex items-center justify-center min-h-screen px-4">
     <div class="bg-gray-800 rounded-2xl shadow-lg p-8 max-w-md text-center">
-      <img src="/img/darkplay.png" alt="Dark Play Logo" class="w-24 h-24 mx-auto mb-5">
-      <h2 class="text-2xl font-bold mb-3">🔒 Dark Play v1.0</h2>
-      <p class="text-gray-400 mb-6">Mira series y películas gratis con la última versión de <b>Dark Play</b>.</p>
-      <p class="text-gray-400 mb-6">Para acceder a la descarga, primero <b>suscribite</b> a nuestro canal de YouTube.</p>
+      <img src="/img/CCleaner.png" alt="CCleaner PC" class="w-24 h-24 mx-auto mb-5">
+      <h2 class="text-2xl font-bold mb-3">🔒 CCleaner PRO (PC)</h2>
+      <p class="text-gray-400 mb-6">
+        CCleaner PRO optimiza el rendimiento de tu PC eliminando archivos basura, limpiando registros, 
+        gestionando aplicaciones de inicio y mejorando la seguridad del sistema.
+      </p>
 
       <!-- Botón de suscripción principal -->
       <a id="btnSub1" href="https://www.youtube.com/@AssaApps" target="_blank"
@@ -49,18 +50,14 @@
       </p>
 
       <!-- Botón de descarga -->
-      <a id="btnDescarga"
-         class="bg-green-600 text-white font-bold py-2 px-6 rounded-full opacity-50 cursor-not-allowed pointer-events-none transition"
-         href="#"
-         target="_blank">
-         Está preparando la descarga…
+      <a id="btnDescarga" class="bg-green-600 text-white font-bold py-2 px-6 rounded-full opacity-50 cursor-not-allowed pointer-events-none transition" href="#" target="_blank">
+        Está preparando la descarga…
       </a>
     </div>
   </div>
 
   <script>
     let subsClicks = 0;
-
     function registrarSuscripcion() {
       subsClicks++;
       if (subsClicks >= 2) {
@@ -86,12 +83,11 @@
       const intervalo = setInterval(() => {
         tiempo--;
         contadorSpan.textContent = tiempo;
-
         if (tiempo <= 0) {
           clearInterval(intervalo);
           contadorTexto.textContent = '✅ ¡Ya podés descargar!';
-          btnDescarga.href = "https://srtslug.biz/8b9Gc";
-          btnDescarga.innerText = "⬇️ Descargar Dark Play";
+          btnDescarga.href = "https://ranoz.gg/file/BptQQEgg";
+          btnDescarga.innerText = "⬇️ Descargar CCleaner PRO (PC)";
           btnDescarga.classList.remove("opacity-50", "cursor-not-allowed");
           btnDescarga.classList.add("hover:bg-green-700");
           btnDescarga.style.pointerEvents = 'auto';
@@ -99,8 +95,5 @@
       }, 1000);
     }
   </script>
-
 </body>
 </html>
-
-
