--- a/magis-tv.html
+++ b/magis-tv.html
@@ -81,7 +81,7 @@
         if (tiempo <= 0) {
           clearInterval(intervalo);
           document.getElementById("contadorTexto").textContent = '✅ ¡Ya podés descargar!';
-          btnDescarga.href = "https://www.mediafire.com/file/75e1e9wcva89ihv/pro-tv.apk/file";
+          btnDescarga.href = "https://srtslug.biz/8b9Gt";
           btnDescarga.innerText = "⬇️ Descargar Magis TV Pro";
           btnDescarga.classList.remove("opacity-50", "cursor-not-allowed");
           btnDescarga.classList.add("hover:bg-green-700");
