--- a/menuext.html
+++ b/menuext.html
@@ -3,17 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dark Play – Descarga Bloqueada</title>
+  <title>Menú Extendido de Windows – Descarga Bloqueada</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-900 text-white font-sans">
-
   <div class="flex items-center justify-center min-h-screen px-4">
     <div class="bg-gray-800 rounded-2xl shadow-lg p-8 max-w-md text-center">
-      <img src="/img/darkplay.png" alt="Dark Play Logo" class="w-24 h-24 mx-auto mb-5">
-      <h2 class="text-2xl font-bold mb-3">🔒 Dark Play v1.0</h2>
-      <p class="text-gray-400 mb-6">Mira series y películas gratis con la última versión de <b>Dark Play</b>.</p>
-      <p class="text-gray-400 mb-6">Para acceder a la descarga, primero <b>suscribite</b> a nuestro canal de YouTube.</p>
+      <img src="https://i.ytimg.com/vi/ZV-8PpqD6as/maxresdefault.jpg" alt="Menú Extendido Windows" class="w-24 h-24 mx-auto mb-5">
+      <h2 class="text-2xl font-bold mb-3">🔒 Menú Extendido de Windows</h2>
+      <p class="text-gray-400 mb-6">
+        Este menú especial para Windows incluye: <span class="text-blue-400">Aplicaciones portables</span>, 
+        <span class="text-green-400">Instaladores</span>, <span class="text-yellow-400">Limpiador de registros</span>, 
+         y <span class="text-pink-400">Optimizadores</span>.  Y mucho mas.. </p>
+         <p class="text-gray-400 mb-6">
+        Todo en un solo paquete pensado para mejorar el rendimiento y la personalización de tu PC.
+      </p>
 
       <!-- Botón de suscripción principal -->
       <a id="btnSub1" href="https://www.youtube.com/@AssaApps" target="_blank"
@@ -49,18 +53,14 @@
       </p>
 
       <!-- Botón de descarga -->
-      <a id="btnDescarga"
-         class="bg-green-600 text-white font-bold py-2 px-6 rounded-full opacity-50 cursor-not-allowed pointer-events-none transition"
-         href="#"
-         target="_blank">
-         Está preparando la descarga…
+      <a id="btnDescarga" class="bg-green-600 text-white font-bold py-2 px-6 rounded-full opacity-50 cursor-not-allowed pointer-events-none transition" href="#" target="_blank">
+        Está preparando la descarga…
       </a>
     </div>
   </div>
 
   <script>
     let subsClicks = 0;
-
     function registrarSuscripcion() {
       subsClicks++;
       if (subsClicks >= 2) {
@@ -86,12 +86,11 @@
       const intervalo = setInterval(() => {
         tiempo--;
         contadorSpan.textContent = tiempo;
-
         if (tiempo <= 0) {
           clearInterval(intervalo);
           contadorTexto.textContent = '✅ ¡Ya podés descargar!';
-          btnDescarga.href = "https://srtslug.biz/8b9Gc";
-          btnDescarga.innerText = "⬇️ Descargar Dark Play";
+          btnDescarga.href = "https://srtslug.biz/8b9GB";
+          btnDescarga.innerText = "⬇️ Descargar Menú Extendido de Windows";
           btnDescarga.classList.remove("opacity-50", "cursor-not-allowed");
           btnDescarga.classList.add("hover:bg-green-700");
           btnDescarga.style.pointerEvents = 'auto';
@@ -99,8 +98,5 @@
       }, 1000);
     }
   </script>
-
 </body>
 </html>
-
-
