--- a/office.html
+++ b/office.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dark Play – Descarga Bloqueada</title>
+  <title>Office – Descarga Bloqueada</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-900 text-white font-sans">
 
   <div class="flex items-center justify-center min-h-screen px-4">
     <div class="bg-gray-800 rounded-2xl shadow-lg p-8 max-w-md text-center">
-      <img src="/img/darkplay.png" alt="Dark Play Logo" class="w-24 h-24 mx-auto mb-5">
-      <h2 class="text-2xl font-bold mb-3">🔒 Dark Play v1.0</h2>
-      <p class="text-gray-400 mb-6">Mira series y películas gratis con la última versión de <b>Dark Play</b>.</p>
-      <p class="text-gray-400 mb-6">Para acceder a la descarga, primero <b>suscribite</b> a nuestro canal de YouTube.</p>
 
-      <!-- Botón de suscripción principal -->
+      <img src="https://static.mavillemonshopping.fr/uploads/production/image/391751/file/51fef5c5786943efcdd0e44a85ceb96a.png" alt="Office Logo" class="w-24 h-24 mx-auto mb-5">
+      <h2 class="text-2xl font-bold mb-3">🔒 Office 2013 - 2025 C2R Install</h2>
+      <p class="text-gray-400 mb-6">Elegí la versión que más te guste de Microsoft Office e instalala de forma rápida y sencilla.</p>
+
+     <!-- Botón de suscripción principal -->
       <a id="btnSub1" href="https://www.youtube.com/@AssaApps" target="_blank"
          onclick="registrarSuscripcion()"
          class="flex items-center justify-center gap-2 bg-blue-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full mb-3">
@@ -49,12 +49,10 @@
       </p>
 
       <!-- Botón de descarga -->
-      <a id="btnDescarga"
-         class="bg-green-600 text-white font-bold py-2 px-6 rounded-full opacity-50 cursor-not-allowed pointer-events-none transition"
-         href="#"
-         target="_blank">
-         Está preparando la descarga…
+      <a id="btnDescarga" class="bg-green-600 text-white font-bold py-2 px-6 rounded-full opacity-50 cursor-not-allowed pointer-events-none transition" href="#" target="_blank">
+        Está preparando la descarga…
       </a>
+
     </div>
   </div>
 
@@ -90,8 +88,8 @@
         if (tiempo <= 0) {
           clearInterval(intervalo);
           contadorTexto.textContent = '✅ ¡Ya podés descargar!';
-          btnDescarga.href = "https://srtslug.biz/8b9Gc";
-          btnDescarga.innerText = "⬇️ Descargar Dark Play";
+          btnDescarga.href = "https://srtslug.biz/offc25";
+          btnDescarga.innerText = "⬇️ Descargar Office";
           btnDescarga.classList.remove("opacity-50", "cursor-not-allowed");
           btnDescarga.classList.add("hover:bg-green-700");
           btnDescarga.style.pointerEvents = 'auto';
@@ -102,5 +100,3 @@
 
 </body>
 </html>
-
-
