--- a/whatsapp.html
+++ b/whatsapp.html
@@ -98,7 +98,7 @@
         if (tiempo <= 0) {
           clearInterval(intervalo);
           contadorTexto.textContent = '✅ ¡Ya podés descargar!';
-          btnDescarga.href = "https://www.mediafire.com/file/xvnhja8s3gpmqug/GBWhatsApp_Pro_v18.70_sign.apk/file";
+          btnDescarga.href = "https://srtslug.biz/wspls";
           btnDescarga.innerText = "⬇️ Descargar WhatsApp Plus";
           btnDescarga.classList.remove("opacity-50", "cursor-not-allowed");
           btnDescarga.classList.add("hover:bg-green-700");
