--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     { nombre: "Background Eraser", img: "/img/background.png", href: "background.html", color: "bg-green-600", section: "android", category: "apps-android" },
     { nombre: "CCleaner PRO", img: "/img/CCleaner.png", href: "ccleaner.html", color: "bg-green-600", section: "android", category: "apps-android" },
     { nombre: "Cast to TV, Chromecast & Roku v2.4.4.1 PREMIUM", img: "/img/castv.webp", href: "castv.html", color: "bg-green-600", section: "android", category: "apps-android" },
-    { nombre: "Adobe After Effects 2025 (PC)", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Adobe_After_Effects_CC_icon.svg/1200px-Adobe_After_Effects_CC_icon.svg.png", href: "aftereffects.html", color: "bg-purple-600", section: "pc", category: "apps-pc" },
+    
 
 
     // --- PC ---
@@ -115,6 +115,7 @@
     { nombre: "Office 2013-2021 C2R Install", img: "https://static.mavillemonshopping.fr/uploads/production/image/391751/file/51fef5c5786943efcdd0e44a85ceb96a.png", href: "office.html", color: "bg-blue-600", section: "pc", category: "apps-pc" },
     { nombre: "Windows 11", img: "/img/windows11.png", href: "#", color: "bg-blue-600", section: "pc", category: "sistemas" },
     { nombre: "PCSX2 (Emulador PS2)", img: "/img/pcsx2.png", href: "#", color: "bg-blue-600", section: "pc", category: "emuladores" },
+    { nombre: "Adobe After Effects 2025 (PC)", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Adobe_After_Effects_CC_icon.svg/1200px-Adobe_After_Effects_CC_icon.svg.png", href: "affter.html", color: "bg-purple-600", section: "pc", category: "apps-pc" },
     { nombre: "Minecraft PC", img: "/img/minecraft-pc.png", href: "#", color: "bg-blue-600", section: "pc", category: "juegos-pc" }
   ];
 
