--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     // --- PC ---
     { nombre: "CCleaner PRO (PC)", img: "/img/CCleaner.png", href: "ccleanerpc.html", color: "bg-blue-600", section: "pc", category: "apps-pc" },
     { nombre: "CMenu Extendido de Windows", img: "https://i.ytimg.com/vi/ZV-8PpqD6as/maxresdefault.jpg", href: "menuext.html", color: "bg-blue-600", section: "pc", category: "apps-pc" },
-    { nombre: "OnBoard Memory Manager (Logitech)", img: "https://www.logitech.com/assets/65549/lg-hub-logo.png", href: "onboard.html", color: "bg-green-600", section: "pc", category: "apps-pc" },
+    { nombre: "OnBoard Memory Manager (Logitech)", img: "https://www.logitech.com/assets/65549/lg-hub-logo.png", href: "Onboard.html", color: "bg-green-600", section: "pc", category: "apps-pc" },
     { nombre: "Office 2013-2021 C2R Install", img: "https://static.mavillemonshopping.fr/uploads/production/image/391751/file/51fef5c5786943efcdd0e44a85ceb96a.png", href: "office.html", color: "bg-blue-600", section: "pc", category: "apps-pc" },
     { nombre: "Windows 11", img: "/img/windows11.png", href: "#", color: "bg-blue-600", section: "pc", category: "sistemas" },
     { nombre: "PCSX2 (Emulador PS2)", img: "/img/pcsx2.png", href: "#", color: "bg-blue-600", section: "pc", category: "emuladores" },
