--- a/Onboard.html
+++ b/Onboard.html
@@ -9,13 +9,13 @@
 <body class="bg-gray-900 text-white font-sans">
   <div class="flex items-center justify-center min-h-screen px-4">
     <div class="bg-gray-800 rounded-2xl shadow-lg p-8 max-w-md text-center">
-      <img src="https://www.logitech.com/assets/65549/lg-hub-logo.png" alt= "Logitech Logo" class="w-24 h-24 mx-auto mb-5">
+      <img src="https://www.logitech.com/assets/65549/lg-hub-logo.png" alt="Logitech Logo" class="w-24 h-24 mx-auto mb-5">
       <h2 class="text-2xl font-bold mb-3">🔒 OnBoard Memory Manager (Logitech)</h2>
       <p class="text-gray-400 mb-6">Instalá el programa oficial de Logitech para gestionar la memoria integrada de tus periféricos.</p>
 
-     <!-- Botón de suscripción principal -->
+      <!-- Botón de suscripción principal -->
       <a id="btnSub1" href="https://www.youtube.com/@AssaApps" target="_blank"
-         onclick="registrarSuscripcion()"
+         onclick="registrarSuscripcion(this)"
          class="flex items-center justify-center gap-2 bg-blue-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full mb-3">
         <!-- Icono YouTube -->
         <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" class="w-6 h-6">
@@ -29,7 +29,7 @@
 
       <!-- Botón de suscripción secundario -->
       <a id="btnSub2" href="https://www.youtube.com/@AssaAR10" target="_blank"
-         onclick="registrarSuscripcion()"
+         onclick="registrarSuscripcion(this)"
          class="flex items-center justify-center gap-2 bg-blue-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full mb-3">
         <!-- Icono YouTube -->
         <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" class="w-6 h-6">
@@ -47,7 +47,10 @@
       </p>
 
       <!-- Botón de descarga -->
-      <a id="btnDescarga" class="bg-green-600 text-white font-bold py-2 px-6 rounded-full opacity-50 cursor-not-allowed pointer-events-none transition" href="#" target="_blank">
+      <a id="btnDescarga"
+         class="bg-green-600 text-white font-bold py-2 px-6 rounded-full opacity-50 cursor-not-allowed pointer-events-none transition"
+         href="#"
+         target="_blank">
         Está preparando la descarga…
       </a>
     </div>
@@ -55,14 +58,20 @@
 
   <script>
     let subsClicks = 0;
-    function registrarSuscripcion() {
-      subsClicks++;
-      if (subsClicks >= 2) {
+    let contadorActivo = false;
+
+    function registrarSuscripcion(btn) {
+      if (!btn.dataset.clicked) {
+        btn.dataset.clicked = "true"; // Evita doble clic en el mismo botón
+        subsClicks++;
+      }
+      if (subsClicks >= 2 && !contadorActivo) {
         iniciarContador();
       }
     }
 
     function iniciarContador() {
+      contadorActivo = true;
       const contadorTexto = document.getElementById("contadorTexto");
       const contadorSpan = document.getElementById("contador");
       const btnDescarga = document.getElementById("btnDescarga");
@@ -80,6 +89,7 @@
       const intervalo = setInterval(() => {
         tiempo--;
         contadorSpan.textContent = tiempo;
+
         if (tiempo <= 0) {
           clearInterval(intervalo);
           contadorTexto.textContent = '✅ ¡Ya podés descargar!';
